# Slicer-DeepInfer

./: .gitignore  CMakeLists.txt  DeepInfer.py  LICENSE  README.md
DeepInfer/: DeepInfer.py
Resources/json/: ProstateCAD.js  ProstateCAD.json  ProstateSegmenter.json
